mainlayout bug fixed and updated

--- a/webroot/css/mainlayout.css
+++ b/webroot/css/mainlayout.css
@@ -73,7 +73,13 @@ ul.topbar > li.nav-item {
 
 .dataentrychange {
     top:55px;
+}
 
+.searchAreaChange {
+    position: fixed;
+    top: 55px;
+    right: 0;
+    z-index: 99;
 }
 
 #chooseFile {
@@ -625,7 +631,6 @@ ul.queryBoxLeft > a {
     left: 290px;
 }
 
-
 #sidenav {
     position: absolute;
     width: 200px;
@@ -696,5 +701,45 @@ ul.queryBoxLeft > a {
     }
     .dataentry{
         width: 85%;
+    }
+}
+
+/* Data Entry Search Area fade in EFFECT */
+#searchArea {
+    animation: fadein 1s;
+    -moz-animation: fadein 1s; /* Firefox */
+    -webkit-animation: fadein 1s; /* Safari and Chrome */
+    -o-animation: fadein 1s; /* Opera */
+}
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
     }
 }
